force-app/main/default/objects/Appointment__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Date part of Start_Time__c</description>
    <formula>DATEVALUE(Start_Time__c)</formula>
    <inlineHelpText>Date part of Start_Time__c</inlineHelpText>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>