force-app/main/default/objects/Appointment__c/fields/Appointment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Reason__c</fullName>
    <description>Reason for the visit</description>
    <inlineHelpText>Reason for the visit</inlineHelpText>
    <label>Appointment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>