force-app/main/default/objects/Appointment__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End time of the appointment</description>
    <inlineHelpText>End time of the appointment</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>