force-app/main/default/objects/Appointment__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time of the appointment</description>
    <inlineHelpText>Start time of the appointment</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>